osha.theme Changelog
====================

1.3.27 (unreleased)
-------------------

- slc.telescope view: Replacing urls which depend on the context of
  the target object with its proper url. #1150 (deroiste)
- removed International network dropdown #1405 (thomasw)
- No more extrawurst for German FOP: removed European and International
  network dropdown, related to #1405 (thomasw)


1.3.26 (2010-06-21)
-------------------

- reverted wrong fix (pilz)


1.3.25 (2010-06-19)
-------------------

- properly fix cachekey (pilz)


1.3.24 (2010-06-19)
-------------------

- hotfix for broken cachekey (pilz)


1.3.23 (2010-06-19)
-------------------

- adding the TelescopeView which takes a path to an object in the
  query string and renders it in the current context #1150. Note: this
  must be explicitly blocked from google before it is used (deroiste)
- added an oshlink short template (pilz).
- Copied faq_view.pt from PHC, to insert plone.belowcontentbody at the bottom.
  This gives us access to the +History link (thomasw)


1.3.22 (2010-06-13)
-------------------

- Since FAQs now have Subcategory, show the Subcat-selector in the practical
  solution search (thomasw)


1.3.21 (2010-06-13)
-------------------

- Adding a method to oshaview so we can get the number of people
  subscribed to the alert service #1330 (deroiste)
- Adding browser view @@publications-list that dynamically lists all
  publication types #728 (reinhardt)
- Fixed link in german network dropdown (pilz)

1.3.20 (2010-06-08)
-------------------

- Reuse existing translation strings #1216 (deroiste)

1.3.19 (2010-06-08)
-------------------

- bugfix: missing tal:attributes from subscribe_mailinglists links
  #1216 (deroiste)

1.3.18 (2010-06-01)
-------------------

- customized simpleattachment widgets to not use the catalog
  [pilz]
- fixed wrong caching in oshcollections portlet. getPath is not cacheable
  [pilz]
- Fixed the oshmacro used for seminars-view, several things were missing
  [thomasw]
